--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,29 @@
 == Change log ==
 
+=== v1.26 ===
+++Changed files: aliases.yml, readme.txt, default recipes++
+(Built on CB 1.3.1-R1.0)
+* Fixed aliases.yml keep warning about being changed
+* Fixed plugin not being fully unloaded when using "reload" command
+* Fixed the duplicated recipes warnings which didn't trigger
+* Fixed not being able to remove vanilla fuels
+* Fixed book_and_quill recipe accepting any kind of dye as ink
+* Added "rmextract" command which generates the recipes for all unhandled recipes (from other plugins or mods)
+* Added "@override" flag which allows admins to override a specific recipe
+* Added data value 7 for piston and sticky piston crafting result (that's how the default is, I don't know why)
+* Added default fuels: wood step (all types), wood stairs (all types), fence gate, wood sword and tools
+* Added removing and re-adding default recipes when using "rmreload" to allow @override to be undone for vanilla recipes
+** For recipes added by other plugins or mods, either restart the entire server or place the same result as the original
+* Added warnings when defining a recipe that has the same ingredient(s) as an existing recipe added by another plugin or mod
+* Added warnings when defining a recipe with @override flag and the original recipe wasn't found, it's also compatible with "rmreload"
+* Improved recipe error reporting, organized by file name and diferently colorized
+* The last report of recipe errors is stored in plugin/RecipeManager/last recipe errors.log
+* Removed mirrored recipes from recipe files as they work without adding mirror shaped duplicates
+* Removed the redstone repeater/diode recipe that uses OFF state redstone torches
+* Removed misleading command from readme.txt
+
+\\
+
 === v1.25b ===
 ++Changed files: aliases.yml, some files from recipes/default/ folder, read below++
 (Built on CB 1.3.1-R0.1 #2281, not compatible with MC 1.2.5)
