--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,14 @@
 == Change log ==
 
+=== v1.26b ===
+(Built on CB 1.3.1-R2.0)
+* Fixed givemoney and givelevel acting as giveexp
+* Fixed min/maxexp, min/maxlevel and min/maxmoney not working at all 
+* Fixed min/max/cost/give money messages printing amount next to the formatted amount
+* Fixed ChunkLoadEvent errors by getting the furnaces from a chunk in a more hacky way
+
+\\
+
 === v1.26 ===
 ++Changed files: aliases.yml, readme.txt, default recipes++
 (Built on CB 1.3.1-R1.0)
